moved code into code directory

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       }
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
       .cajslogo {
-        background-image: url('cajslogo-thumb.jpeg');
+        background-image: url('img/cajslogo-thumb.jpeg');
         background-size: 75% 85%;
       }
       .highlight:hover {
@@ -56,8 +56,8 @@ class: center, middle, cajslogo
 - Social Distancing, Quarantine, and Isolation
 - Covering your Face
 
-<img src="covid19.png" alt="COVID-19" width="20%" />
-<img src="working-from-home-1-head-shot.jpeg" alt="Working from home" width="60%" />
+<img src="img/covid19.png" alt="COVID-19" width="20%" />
+<img src="img/working-from-home-1-head-shot.jpeg" alt="Working from home" width="60%" />
 
 ---
 
@@ -84,11 +84,11 @@ Welcome to the Central Arkansas JavaScript monthly meeting.  This is our first t
 
 class: center, middle
 
-<img src="how-we-got-here.jpg" alt="how we got here" width="700px" />
-<img src="http1-vs-http2.png" alt="http1 vs. http2" height="200px" />
+<img src="img/how-we-got-here.jpg" alt="how we got here" width="700px" />
+<img src="img/http1-vs-http2.png" alt="http1 vs. http2" height="200px" />
 ---
 
-![Multiplexing HTTP2](mutliplexing.png)
+![Multiplexing HTTP2](img/mutliplexing.png)
 
 ---
 
@@ -114,7 +114,7 @@ class: center, middle
 
 # Show Me the Code!
 
-<img src="react-dev.jpeg" alt="react developer" width="95%" />
+<img src="img/react-dev.jpeg" alt="react developer" width="95%" />
 
 ---
 
@@ -272,7 +272,9 @@ node server.js --port 8000 --home ~/demos/wpack/public
 
 ---
 
-## Images from the following articles:
+These slides [https://github.com/martinjackson](https://github.com/martinjackson) "cajs-presentation-2020-April"
+
+## Images came from the following articles:
 
 ### Everything You Need To Know About HTTP 2.0
 
@@ -292,7 +294,7 @@ node server.js --port 8000 --home ~/demos/wpack/public
 
 ---
 
-<img src="Thank-You.jpeg" alt="Thank You" width="95%" />
+<img src="img/Thank-You.jpeg" alt="Thank You" width="95%" />
 
 
     </textarea>
